<resources>
    <string name="app_name">SecondSql</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="clearDatabase">Drop all data</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="androidVer">Android Version</string>
    <string name="website">Web Site</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>